<resources>
    <string name="app_name">Info Bucharest</string>
    <string name="register">Create New Account</string>
    <string name="firstname">First Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registerAccount">Register</string>
    <string name="monuments">Monuments</string>
    <string name="parks">Parks</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="resetPass">Reset Your Password</string>
    <string name="verificationEmail">Send Verification Email</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="barspubs">Bars &amp; Pubs</string>
    <string name="maps">Maps</string>
    <string name="arculDeTriumf">The Arch Of Triumph</string>
    <string name="memorialulRenasterii">Memorial of Rebirth</string>
    <string name="statuieCarol">Equestrian statue of Carol I</string>
    <string name="km0">Kilometer Zero</string>
    <string name="charlesSquare">Charles de Gaulle Square</string>
    <string name="statuieIuliu">Iuliu Maniu Statue</string>
    <string name="title_activity_arch_map">Map</string>
</resources>