<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MonumentsList">

    <Button
        android:id="@+id/backBtnMonumentsList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/backbtn"
        android:text="@string/back"
        android:alpha="0.6"
        android:fontFamily="@font/chalkdust"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/archBtn"
        android:layout_width="230dp"
        android:layout_height="46dp"
        android:background="@drawable/button"
        android:fontFamily="@font/chalkdust"
        android:text="@string/arculDeTriumf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />

    <Button
        android:id="@+id/memorialBtn"
        android:layout_width="230dp"
        android:layout_height="46dp"
        android:background="@drawable/button"
        android:fontFamily="@font/chalkdust"
        android:text="@string/memorialulRenasterii"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341" />

    <Button
        android:id="@+id/carolStatueBtn"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:background="@drawable/button"
        android:fontFamily="@font/chalkdust"
        android:text="@string/statuieCarol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594" />

    <Button
        android:id="@+id/kmoBtn"
        android:layout_width="180dp"
        android:layout_height="46dp"
        android:background="@drawable/button"
        android:fontFamily="@font/chalkdust"
        android:text="@string/km0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849" />

</androidx.constraintlayout.widget.ConstraintLayout>